--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,7 +11,7 @@ body {
     h1 {
         color: var(--vt-c-darkbrown);
         font-size: 3rem;
-        margin-bottom: 3px;
+        margin: 5px;
         font-family: "Rowdies", sans-serif;
         font-weight: 300;
     }
@@ -24,6 +24,14 @@ body {
         font-family: sans-serif;
         color: var(--vt-c-darkbrown);
     } 
+
+    form {
+        font-family: sans-serif;
+        margin-top: 20px;
+        input {
+            margin-bottom: 20px;
+        }
+    }
 }
 
 button {
