--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,6 +1,7 @@
 /* variabler för färger osv */
 
 :root {
+    --vt-c-white: #F9F7F1;
     --vt-c-orange: #996333;
     --vt-c-darkbrown: #3A3627;
     --vt-c-brown: #7C6950;
