💄 adds styling to score board

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,9 +1,8 @@
-/* variabler för färger osv */
-
 :root {
     --vt-c-white: #F9F7F1;
+    --vt-c-beige: #f7f4eb;
     --vt-c-orange: #996333;
     --vt-c-darkbrown: #3A3627;
     --vt-c-brown: #7C6950;
-
+    --vt-c-lightbrown: #D6C4A9;
 }
