--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,11 +16,11 @@ body {
 
     h2 {
         color: var(--vt-c-brown);
+        font-size: 2rem;
     }
 
     p {
         font-family: sans-serif;
-        color: var(--vt-c-darkbrown);
     } 
 
     form {
@@ -55,15 +55,16 @@ button:hover {
     border: solid, var(--vt-c-orange), 2px;
 }
 
-button:active {
-    background-color: var(--vt-c-orange);
-}
-
 .resetBtn {
     background-color: var(--vt-c-white);
     color: var(--vt-c-orange);
     border: solid, var(--vt-c-orange), 2px;
+}
 
+.resetBtn:hover {
+    background-color: var(--vt-c-orange);
+    color: var(--vt-c-white);
+    border: solid, var(--vt-c-orange), 2px;
 }
   
 
