--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@ body {
     h2 {
         color: var(--vt-c-brown);
         font-size: 2rem;
+        margin-bottom: 24px;
     }
 
     p {
@@ -26,13 +27,16 @@ body {
     form {
         font-family: sans-serif;
         margin-top: 20px;
+
         input {
             margin-bottom: 20px;
+            margin-top: 6px;
             border: solid var(--vt-c-darkbrown) 1px;
-            border-radius: 10px;
+            border-radius: 15px;
             color: var(--vt-c-orange);
             padding-left: 10px;
             width: 150px;
+            height: 20px;
         }
     }
 }
