--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,6 +38,7 @@ body {
             padding-left: 10px;
             width: 150px;
             height: 20px;
+            font-size: 16px;
         }
     }
 }
